# LegoIndyDecomp

./: .gitignore  CMakeLists.txt  README.md
LegoIndyDecomp/: CMakeLists.txt  compatibility.h  error.h  main.cpp  main.h  utils.h
LegoIndyDecomp/compat/: filesystem.cpp  filesystem.h
LegoIndyDecomp/compat/filesystem/: filesystem.cpp  filesystem.h  translate.h
LegoIndyDecomp/fileio/: fileio.cpp  fileio.h  fileiomanager.cpp  macros.h  types.h
LegoIndyDecomp/strings/: hash.cpp  hash.h  lz2k.cpp  lz2k.h  std.cpp  std.h  strings.cpp  strings.h  types.h
